--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eventcatalog-sample-with-github-actions",
+  "name": "eventcatalog-sample-with-github-actions - github pages",
   "version": "0.1.0",
   "private": true,
   "scripts": {
